project(TKDraw)

if (WIN32)
  list( APPEND TKDraw_PRECOMPILED_DEFS "-D__Draw_DLL" )
  list( APPEND TKDraw_PRECOMPILED_DEFS "-D__DBRep_DLL" )
  list( APPEND TKDraw_PRECOMPILED_DEFS "-D__DrawTrSurf_DLL" )
  string( REGEX REPLACE ";" " " TKDraw_PRECOMPILED_DEFS "${TKDraw_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKDraw_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/Draw")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/Draw" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/Draw")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/Draw" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DBRep")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DBRep" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DBRep")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DBRep" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DrawTrSurf")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DrawTrSurf" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DrawTrSurf")
      list( APPEND TKDraw_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DrawTrSurf" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/Draw")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/Draw" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/Draw")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/Draw" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DBRep")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DBRep" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DBRep")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DBRep" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DrawTrSurf")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DrawTrSurf" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DrawTrSurf")
    list( APPEND TKDraw_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DrawTrSurf" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKDraw_USED_LIBS TKernel )
  list( APPEND TKDraw_USED_LIBS TKG2d )
  list( APPEND TKDraw_USED_LIBS TKGeomBase )
  list( APPEND TKDraw_USED_LIBS TKG3d )
  list( APPEND TKDraw_USED_LIBS TKMath )
  list( APPEND TKDraw_USED_LIBS TKBRep )
  list( APPEND TKDraw_USED_LIBS TKGeomAlgo )
  list( APPEND TKDraw_USED_LIBS TKTopAlgo )
  list( APPEND TKDraw_USED_LIBS TKMesh )
  list( APPEND TKDraw_USED_LIBS TKService )
  list( APPEND TKDraw_USED_LIBS TKHLR )

if (WIN32)
  list( APPEND TKDraw_USED_LIBS tcl${3RDPARTY_TCL_LIBRARY_VERSION}.lib )
  list( APPEND TKDraw_USED_LIBS tk${3RDPARTY_TCL_LIBRARY_VERSION}.lib )
  list( APPEND TKDraw_USED_LIBS gdi32.lib )
  list( APPEND TKDraw_USED_LIBS advapi32.lib )
  list( APPEND TKDraw_USED_LIBS user32.lib )
elseif(APPLE)
  find_library(FRAMEWORKS_TCL NAMES Tcl)
  list( APPEND TKDraw_USED_LIBS ${FRAMEWORKS_TCL} )
  find_library(FRAMEWORKS_TK NAMES Tk)
  list( APPEND TKDraw_USED_LIBS ${FRAMEWORKS_TK} )
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbb )
  endif()
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbbmalloc )
  endif()
  list( APPEND TKDraw_USED_LIBS objc )
  find_library(FRAMEWORKS_APPKIT NAMES Appkit)
  list( APPEND TKDraw_USED_LIBS ${FRAMEWORKS_APPKIT} )
  find_library(FRAMEWORKS_IOKIT NAMES IOKit)
  list( APPEND TKDraw_USED_LIBS ${FRAMEWORKS_IOKIT} )
elseif(ANDROID)
  list( APPEND TKDraw_USED_LIBS tcl8.6 )
  list( APPEND TKDraw_USED_LIBS X11 )
  list( APPEND TKDraw_USED_LIBS tk8.6 )
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbb )
  endif()
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbbmalloc )
  endif()
else()
  list( APPEND TKDraw_USED_LIBS tcl${3RDPARTY_TCL_LIBRARY_VERSION} )
  list( APPEND TKDraw_USED_LIBS X11 )
  list( APPEND TKDraw_USED_LIBS tk${3RDPARTY_TK_LIBRARY_VERSION} )
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbb )
  endif()
  if(USE_TBB)
    list( APPEND TKDraw_USED_LIBS tbbmalloc )
  endif()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/Draw/Draw_Failure_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_Failure_0.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_Failure_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_Failure_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_Failure_0.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_Failure_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_IndexedMapNodeOfMapOfAsciiString_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_MapOfAsciiString_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceNodeOfSequenceOfDrawable3D_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//drv/Draw/Draw_SequenceOfDrawable3D_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/CommandWindow.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/CommandWindow.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/CommandWindow.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/CommandWindow.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/CommandWindow.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/CommandWindow.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Axis3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Axis3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_BasicCommands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_BasicCommands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_BasicCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_BasicCommands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_BasicCommands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_BasicCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Box.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Box.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Box.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Box.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Box.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Box.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Chronometer.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Chronometer.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Chronometer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Chronometer.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Chronometer.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Chronometer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Circle3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Circle3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Color.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Color.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Color.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Color.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Color.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Color.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Commands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Commands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Commands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Commands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Commands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Commands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Debug.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Debug.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Debug.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Debug.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Debug.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Debug.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Display.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Display.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Display.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Display.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Display.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Display.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Drawable3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Drawable3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_GraphicCommands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_GraphicCommands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_GraphicCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_GraphicCommands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_GraphicCommands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_GraphicCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Grid.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Grid.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Grid.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Grid.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Grid.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Grid.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Interpretor.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Interpretor.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Interpretor.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Interpretor.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Interpretor.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Interpretor.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Main.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Main.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Main.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Main.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Main.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Main.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Marker3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Marker3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Number.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Number.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Number.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Number.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Number.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Number.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_PloadCommands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_PloadCommands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_PloadCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_PloadCommands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_PloadCommands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_PloadCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Printer.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Printer.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Printer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Printer.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Printer.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Printer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_ProgressIndicator.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_ProgressIndicator.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_ProgressIndicator.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_ProgressIndicator.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_ProgressIndicator.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_ProgressIndicator.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Segment3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Segment3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Text2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Text2D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Text2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text2D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Text3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Text3D.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Text3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text3D.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Text3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_UnitCommands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_UnitCommands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_UnitCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_UnitCommands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_UnitCommands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_UnitCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_VariableCommands.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_VariableCommands.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_VariableCommands.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_VariableCommands.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_VariableCommands.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_VariableCommands.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_View.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_View.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_View.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_View.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_View.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_View.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Viewer.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Viewer.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Viewer.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Viewer.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Viewer.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Viewer.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Window.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Window.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Window.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/MainWindow.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/MainWindow.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/MainWindow.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/MainWindow.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/MainWindow.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/MainWindow.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/init.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/init.cxx" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/init.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/init.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/init.cxx" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/init.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfEdge_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfFace_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListIteratorOfListOfHideData_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfEdge_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfFace_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListNodeOfListOfHideData_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfEdge_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfFace_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//drv/DBRep/DBRep_ListOfHideData_0.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Debug.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Debug.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Debug.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Debug.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Debug.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Debug.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_DrawableShape.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_DrawableShape.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_DrawableShape.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_DrawableShape.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_DrawableShape.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_DrawableShape.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Edge.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Edge.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Edge.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Edge.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Edge.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Edge.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Face.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Face.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_Face.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Face.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Face.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_Face.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_HideData.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_HideData.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_HideData.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_HideData.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_HideData.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_HideData.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DBRep/DBRep_IsoBuilder.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_IsoBuilder.cxx" )
    SOURCE_GROUP (DBRep FILES "${BUILD_PATCH_DIR}//src/DBRep/DBRep_IsoBuilder.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_IsoBuilder.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_IsoBuilder.cxx" )
      SOURCE_GROUP (DBRep FILES "${CMAKE_SOURCE_DIR}//src/DBRep/DBRep_IsoBuilder.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineCurve2d.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BSplineSurface.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierCurve2d.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_BezierSurface.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Curve2d.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Debug.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Drawable.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Point.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon2D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Polygon3D.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Surface.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx" )
    SOURCE_GROUP (DrawTrSurf FILES "${BUILD_PATCH_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx" )
      SOURCE_GROUP (DrawTrSurf FILES "${CMAKE_SOURCE_DIR}//src/DrawTrSurf/DrawTrSurf_Triangulation2D.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/Draw/Draw_Window_1.mm")
    list( APPEND TKDraw_USED_SRCFILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Window_1.mm" )
    SOURCE_GROUP (Draw FILES "${BUILD_PATCH_DIR}//src/Draw/Draw_Window_1.mm")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window_1.mm")
      list( APPEND TKDraw_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window_1.mm" )
      SOURCE_GROUP (Draw FILES "${CMAKE_SOURCE_DIR}//src/Draw/Draw_Window_1.mm")
    ENDIF()
  ENDIF()

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKDraw)
 add_library( TKDraw SHARED ${TKDraw_USED_SRCFILES} )

 set_property(TARGET TKDraw PROPERTY FOLDER Draw)

 install( TARGETS TKDraw
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_POSTFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bind/Debug/TKDraw.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_POSTFIX}")
 endif()


 set_target_properties( TKDraw PROPERTIES COMPILE_FLAGS "${TKDraw_PRECOMPILED_DEFS}" )
 include_directories( ${TKDraw_COMPILER_DIRECTORIES} )
 target_link_libraries( TKDraw ${TKDraw_USED_LIBS} )
endif()
